<resources>
    <string name="app_name">hamadcartoon</string>
    <string name="browse_book">الكتب</string>
    <string name="about_artist">عن الفنان</string>
    <string name="rate_app">قيم التطبيق</string>
    <string name="Developer">برمجة وتصميم هيثم الحداد</string>


    <string name="about_name">حمد جعفر محمد جاسم الغائب</string>

    <string name="about_list">
• مواليد البحرين 5/8/1974 \n
• متزوج وله من الابناء (فواز – علي) والبنات (رنا – مها) \n
• خريج بكاليريوس ادارة اعمال \n
• خريج تقنيات الهندسة الميكانيكية بجامعة البحرين \n
    </string>

    <string name="works_title"> الصحف اليومية والمجلات الأسبوعية</string>


    <string name="works_list">

•  1990-1994 رسام كاريكاتير بصحيفة الايام البحرينية \n
•  1994-2002 رسام كاريكاتير بصحيفة أخبار الخليج البحرينية \n
• 2002-2011 رسام كاريكاتير صفحة الرأي / محرر صفحة كاريكاتير بصحيفة الوسط البحرينية\n
• 1990-1998 رسام كاريكاتير بمجلة المواقف البحرينية الاسبوعية\n
• 1990-1998 رسام كاريكاتير بمجلة هنا البحرين الصادرة من وزارة الاعلام\n
• 1990-2011 رسام كاريكاتير بمجلة بنت الخليج الاماراتية\n
• 2004-2008 رسام كاريكاتير بمجلة النهضة الكويتية \n
• 2000-2006 رسام كاريكاتير بمجلة اسرار الكويتية\n
    </string>

    <string name="achievement_list">
• أقام معرضين للكاريكاتير أحداهما في الطائف 1992م والثاني في معهد البحرين للتدريب 1999م \n
• ابريل 2008 مثل البحرين في مجموعة رسامين الكاريكاتير للشرق الاوسط لبرنامج رسامين الكاريكاتير (الزائر الدولي) للولايات  المتحدة الامريكية \n
• له ثلاث كتب كاريكاتير مطبوعة (مسكين انت يا موظف 2002 – كاريكاتير الغائب 2007 – كاريكاتير 1994) \n
•30 /4/2010 – 4/5/2010 مثل البحرين في معرض الكاريكاتير لنادي الجسرة في الدوحة. \n
• الحائز على لقب أفضل رسام كاريكاتير لعام 2009 من منتدى الصحافة العالمية  \n
• 20/3/2016 – 27/3/2016 مثل البحرين في معرض الملتقى الدولي الثالث للكاريكاتير في القاهرة بإدارة جمعية رسامين الكاريكاتير المصرية. \n
• سبتمبر 2016 – ملتقى الكويت الدولي للكاريكاتير \n
•  ابريل 2018 مثل البحرين في معرض الملتقى الدولي الرابع للكاريكاتير في القاهرة بإدارة جمعية رسامين الكاريكاتير المصرية. \n
• مجموعة اصدارات الكتب الاليكترونية (سنة أولى ديمقراطية / شدوا الأحزمة – تجربتي في تخسيس الاوزان / عرف كاريكاتير العام الجديد 2009 قراءة تحليلة ونماذج) \n
• صمم العديد من ملصقات وبوسترات بنك الدم البحريني \n
• مصمم أغلفة كتب و وهويات تجارية. \n



    </string>
</resources>
