<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3f3e4"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/title_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title" />


    <ImageView
        android:id="@+id/personal_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/title_picture"
        android:layout_centerInParent="true"
        android:src="@drawable/dp" />

    <Button
        android:id="@+id/Browse_Book"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/personal_picture"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="BrowseBook"
        android:text="@string/browse_book"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        />

    <Button
        android:id="@+id/About_Artist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Browse_Book"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/about_artist"
        android:textColor="@color/colorPrimary"
        android:onClick="AboutArtist"
        android:textSize="24sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rate_App"
        android:text="@string/rate_app"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:layout_below="@id/About_Artist"
        android:layout_marginTop="10dp"
        android:onClick="RateApp"
        />


</RelativeLayout>