<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:paddingTop="20dp"
            android:src="@drawable/dp"

            />

        <TextView
            android:id="@+id/About_Name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/about_name"
            android:textAlignment="center"
            android:fontFamily="@font/gess"
            android:textColor="@color/colorPrimaryDark"
            android:autoSizeTextType="uniform"
            android:textSize="33sp"

            />

        <TextView
            android:id="@+id/About_List"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:fontFamily="@font/gess"
            android:autoSizeTextType="uniform"
            android:text="@string/about_list"
            android:textColor="@color/texts"
            android:lineSpacingMultiplier="1.4"
            android:layoutDirection="rtl"
            />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"
            />

        <TextView
            android:id="@+id/Works_List"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/works_list"
            android:textColor="@color/texts"
            android:lineSpacingMultiplier="1.4"
            android:fontFamily="@font/gess"
            android:layoutDirection="rtl"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Achievement_List"
            android:layoutDirection="rtl"
            android:layout_marginTop="20dp"
            android:textSize="23sp"
            android:fontFamily="@font/gess"
            android:textColor="@color/texts"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/achievement_list"
            />



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:onClick="AccessFacebook"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/facebook" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:onClick="AccessTwitter"
                android:layout_marginRight="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/twitter" />

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:onClick="AccessInstagram"
                android:scaleType="fitXY"
                android:src="@drawable/instagram"
                />


        </LinearLayout>

    </LinearLayout>


</ScrollView>

